# log-csv-gather

./: .gitignore  User_Guide.txt  pyproject.toml  readme.md  requirements.txt  run.bat
docs/: production-runbook.md  web-dashboard.md  windows-task-scheduler.md
docs/superpowers/specs/: 2026-06-18-log-csv-gather-design.md
examples/: downloader.config.yaml  uploader.config.yaml
src/log_csv_gather/: __init__.py  __main__.py  active_config.py  cli.py  config.py  drive.py  hash_utils.py  logging_utils.py  scanner.py  scheduler.py  state.py  status.py  workflows.py
src/log_csv_gather/web/: __init__.py  actions.py  app.py  jobs.py  launcher.py  local_browser.py  runtime.py
src/log_csv_gather/web/static/: app.css  app.js
src/log_csv_gather/web/templates/: index.html
tests/: fakes.py  test_active_config.py  test_cli.py  test_config.py  test_drive_adapter.py  test_drive_auth.py  test_logging_utils.py  test_run_bat.py  test_scanner.py  test_scheduler.py  test_state.py  test_web_app.py  test_web_jobs.py  test_web_phase2_api.py  test_web_phase3_scheduler_api.py  test_web_runtime.py  test_web_setup_api.py  test_workflows.py
